--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
     </script>
 
-<script src="Script.js"></script>   
+<script src="script.js" type="text/javascript"></script>   
 </body>
 </html>
